--- a/css/style.css
+++ b/css/style.css
@@ -649,3 +649,14 @@ img {
   from {opacity: .4}
   to {opacity: 1}
 }
+
+/*Paragraphs styling*/
+#paragraphStyle {
+	justify-content: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	border-radius: 15px;
+	margin-left: 10%;
+	margin-right: 10%;
+} 
