--- a/css/style.css
+++ b/css/style.css
@@ -655,9 +655,11 @@ img {
 	justify-content: center;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	tex-align: center;
 	border-radius: 15px;
 	margin-left: 10%;
 	margin-right: 10%;
+	padding-left: 50px;
+	padding-right: 50px;
 } 
 
