--- a/css/style.css
+++ b/css/style.css
@@ -604,16 +604,27 @@ img {
 }
 
 /* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
+.textops {
+  color: #fdfbfb;
+  font-size: 20px;
   padding: 8px 12px;
   position: absolute;
-  bottom: 8px;
+  bottom: 15px;
   width: 100%;
   text-align: center;
 }
 
+/* Caption text */
+.text {
+	color: #f2f2f2;
+	font-size: 15px;
+	padding: 8px 12px;
+	position: absolute;
+	bottom: 8px;
+	width: 100%;
+	text-align: center;
+  }
+   
 /* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
