--- a/css/style.css
+++ b/css/style.css
@@ -702,3 +702,24 @@ ul {
     text-align: center;
     list-style-position: inside;
 }
+
+/* Hide the images by default */
+.mySlides2 {
+	display: none;
+  }
+
+  /* The dots/bullets/indicators */
+.dot2 {
+	cursor: pointer;
+	height: 15px;
+	width: 15px;
+	margin: 0 2px;
+	background-color: #bbb;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color 0.6s ease;
+  }
+  
+  .active, .dot2:hover {
+	background-color: #717171;
+  }
