--- a/css/style.css
+++ b/css/style.css
@@ -658,9 +658,9 @@ img {
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+/* .active, .dot:hover {
   background-color: #717171;
-}
+} */
 
 /* Fading animation */
 .fade {
