--- a/css/style.css
+++ b/css/style.css
@@ -722,6 +722,6 @@ ul {
 	transition: background-color 0.6s ease;
   }
   
-  .active, .dot2:hover {
+  /* .active, .dot2:hover {
 	background-color: #717171;
-  }
+  } */
