--- a/css/style.css
+++ b/css/style.css
@@ -658,9 +658,9 @@ img {
   transition: background-color 0.6s ease;
 }
 
-/* .active, .dot:hover {
-  background-color: #717171;
-} */
+.active, .dot:hover {
+  background-color: #8d7fa1;
+}
 
 /* Fading animation */
 .fade {
@@ -722,6 +722,6 @@ ul {
 	transition: background-color 0.6s ease;
   }
   
-  /* .active, .dot2:hover {
-	background-color: #717171;
-  } */
+  .active, .dot2:hover {
+	background-color: #8d7fa1;
+  }
